# Telegram-Bot-Api-Cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Telegram-Bot-Api-Cpp.sln  install.sh  main.cpp  main_generator.cpp  outs  run.sh  types_generator.cpp  types_generator.h  vcpkg.json
.github/workflows/: codeql-analysis.yml  compile.yml
Telegram-Bot-Api-Cpp/: Telegram-Bot-Api-Cpp.filters  Telegram-Bot-Api-Cpp.vcxproj  main.cpp  packages.config
Telegram-Bot-Api-Cpp/Debug/: vc141.idb  vc142.idb
Telegram-Bot-Api-Cpp/Debug/Telegram.220FBDAA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Telegram-Bot-Api-Cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Telegram-Bot-Api-Cpp/Debug/WTelApi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Telegram-Bot-Api-Cpp/Examples/: answerInlineQuery.cpp  getChat.cpp  sendMessage.cpp
Telegram-Bot-Api-Cpp/include/: TelegramAPI.h  types.h
Telegram-Bot-Api-Cpp/src/: TelegramAPI.cpp  types.cpp
Telegram-Bot-Api-Cpp/x64/Debug/: vc142.idb
Telegram-Bot-Api-Cpp/x64/Debug/Telegram.220FBDAA.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+2 more)
examples/: getChat.cpp  getFile.cpp
linux/: main.cpp
linux/Examples/: answerInlineQuery.cpp
linux/include/: TelegramAPI.h  types.h
linux/src/: TelegramAPI.cpp
telegram/: CMakeLists.txt  main.cpp
telegram/Examples/: answerInlineQuery.cpp  getChat.cpp  getFile.cpp  sendPhoto.cpp
telegram/include/: Methods.h  TelegramAPI.h  Types.h  methods.h  type_generator.h  types.h  types_generator.h
telegram/include/network/: Error.h  HTTPrequest.h  Network.h
telegram/include/types/: Animation.h  Audio.h  BotCommand.h  BotCommandScope.h  BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatAdministratorRights.h  ChatInviteLink.h  ChatJoinRequest.h  ChatLocation.h  ChatMember.h  ChatMemberAdministrator.h  ChatMemberBanned.h  ChatMemberLeft.h  ChatMemberMember.h  ChatMemberOwner.h  ChatMemberRestricted.h  ChatMemberUpdated.h  ChatPermissions.h  ChatPhoto.h  ChatShared.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  EncryptedCredentials.h  EncryptedPassportElement.h  File.h  ForceReply.h  ForumTopic.h  ForumTopicClosed.h  ForumTopicCreated.h  (+106 more)
telegram/src/: TelegramAPI.cpp  types.cpp
telegram/src/network/: Error.cpp  HTTPrequest.cpp
(+4 files in other folders)
