cmake_minimum_required(VERSION 3.8.0)
project(TelegramBotApiCpp VERSION 0.1.0)
add_subdirectory(telegram)
add_executable(TelegramBotApiCpp main.cpp)
find_package(nlohmann_json CONFIG REQUIRED)
if (MSVC)
    target_link_libraries(TelegramBotApiCpp PRIVATE nlohmann_json::nlohmann_json TelegramBotApiCppDll)
endif (MSVC)
if (UNIX)
    target_link_libraries(TelegramBotApiCpp PRIVATE nlohmann_json::nlohmann_json TelegramBotApiCppDll)
endif (UNIX)
