cmake_minimum_required(VERSION 3.8.0)
project(TelegramBotApiCppDll VERSION 0.1.0)
set(SOURCES src/TelegramAPI.cpp "include/network/HTTPrequest.h" "src/network/HTTPrequest.cpp" "include/network/Error.h" "src/network/Error.cpp" "include/network/Network.h")
find_package(cpr CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
add_library(TelegramBotApiCppDll STATIC ${SOURCES})
if (MSVC)
    target_link_libraries(TelegramBotApiCppDll PRIVATE nlohmann_json::nlohmann_json cpr::cpr)
endif (MSVC)
if (UNIX)
    target_link_libraries(TelegramBotApiCppDll PRIVATE nlohmann_json::nlohmann_json pthread cpr::cpr)
endif (UNIX)